[package]
name = "md-dir-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
anyhow = "1.0.65"
axum = { version = "0.5.16", features = [ "ws", "serde_json" ] }
clap = { version = "3.2", features = [ "derive" ] }
futures = "0.3.24"
inotify = { version = "0.10" }
json = "0.12.4"
log = "0.4.17"
maud = "0"
notify = { version = "5.0.0", default-features = false, features = [ "macos_kqueue", "serde" ], optional = true }
pulldown-cmark = "0.9"
regex = "1.6.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
simplelog = "0.12.0"
tokio = { version = "1", features = [ "full" ] }
watchman_client = { version = "0.8", optional = true }
md-icons = { version = "0.2.2", features = [ "maud" ] }
bytes = "1.2.1"
chrono = "0.4.22"

[features]
watchman = [ "watchman_client" ]
notify = [ "dep:notify" ]
